sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value j
    j=i-1
    ^AlgInsertionSort:7: error: not found: value gatValeur
    while (gatValeur(j)>v){
           ^AlgInsertionSort:7: error: not found: value j
    while (gatValeur(j)>v){
                     ^AlgInsertionSort:8: error: not found: value j
      copie(j-1,j)
            ^AlgInsertionSort:8: error: not found: value j
      copie(j-1,j)
                ^AlgInsertionSort:9: error: not found: value j
      j-=1
      ^AlgInsertionSort:12: error: not found: value j
    setValeur(j,v)
              ^