sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v:Int = 0
  for (i <- 1 to getNombreValeurs()-1){
    v = getValeur(i)
    j=i-1
    while (gatValeur(j)>v){
      copie(j-1,j)
      j-=1
      
    }
    setValeur(j,v)
  }
}